fix button on membership section, align about header

--- a/app/assets/stylesheets/queries.css
+++ b/app/assets/stylesheets/queries.css
@@ -25,4 +25,8 @@
     p {
       text-align: center;
     }
+
+    #about {
+      text-align: center;
+    }
 }
